--- a/package.json
+++ b/package.json
@@ -82,10 +82,10 @@
     "babel-register": "6.14.0",
     "flow-bin": "0.32.0",
     "sinon": "1.17.6",
+    "sinon-stub-promise": "3.0.1",
     "xo": "0.16.0"
   },
   "dependencies": {
-    "github": "3.1.1",
-    "sinon-stub-promise": "3.0.1"
+    "github": "3.1.1"
   }
 }
